# mArk-neo

./: .gitignore  CMakeLists.txt  COMPONENTS.md  README.md  flash.sh  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4
main/: CMakeLists.txt  calendar_fetch.c  calendar_fetch.h  challenge_store.c  challenge_store.h  idf_component.yml  img_gold_medal.c  img_gold_medal.h  led_strip_encoder.c  led_strip_encoder.h  lv_font_swe_fallback_14.c  lv_font_swe_fallback_24.c  lv_font_swe_fallback_48.c  lv_font_swedish_14.c  lv_font_swedish_24.c  lv_font_swedish_48.c  lv_font_ui_14.c  lv_font_ui_24.c  lv_font_ui_48.c  main.c  power_button.c  power_button.h  rotary_encoder.c  rotary_encoder.h  secrets.h.example  sound_driver.c  sound_driver.h  streak_store.c  streak_store.h  timer_engine.c  timer_engine.h  ui_taskviewer.c  ui_taskviewer.h  user_store.c  user_store.h  web_config.c  web_config.h  ws2812_led.c  ws2812_led.h
peripheral/bsp_illuminate/: bsp_illuminate.c
